--- a/php/Dockerfile-8
+++ b/php/Dockerfile-8
@@ -1,6 +1,6 @@
 FROM fj0rd/ng
 
-ARG php_version=7.4
+ARG php_version=8.0
 ENV PHP_VERSION=${php_version}
 ENV PHP_PKGS \
         php${PHP_VERSION} \
@@ -10,7 +10,6 @@ ENV PHP_PKGS \
         php${PHP_VERSION}-common \
         php${PHP_VERSION}-curl \
         php${PHP_VERSION}-gd \
-        php${PHP_VERSION}-json \
         php${PHP_VERSION}-mbstring \
         php${PHP_VERSION}-pgsql \
         php${PHP_VERSION}-mysql \
@@ -22,9 +21,7 @@ ENV PHP_PKGS \
 
 RUN set -eux \
   ; apt-get update \
-  ; xh -F https://deb.nodesource.com/setup_16.x | bash - \
-  ; apt-get install -y --no-install-recommends nodejs cron \
-  ; apt-get install -y --no-install-recommends $PHP_PKGS \
+  ; apt-get install -y --no-install-recommends $PHP_PKGS cron \
   ; apt-get autoremove -y && apt-get clean -y && rm -rf /var/lib/apt/lists/*
 
 RUN set -eux \
@@ -53,10 +50,7 @@ COPY services.d/php-fpm /etc/services.d/php-fpm
 
 RUN set -ex \
   ; xh -F https://getcomposer.org/installer \
-    | php -- --install-dir=/usr/local/bin --filename=composer \
-  ; npm install -g intelephense \
-  ; cd /opt; git clone --depth=1 https://github.com/xdebug/vscode-php-debug.git; cd vscode-php-debug; npm install; npm run build \
-  ; npm cache clean -f
+    | php -- --install-dir=/usr/local/bin --filename=composer
 
 ENV PHP_DEBUG=
 ENV PHP_PROFILE=
