--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -82,21 +82,12 @@ jobs:
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:php7
           labels: ${{ steps.meta.outputs.labels }}
 
-      - name: Build php7x
+      - name: Build php8
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           context: php
-          file: php/Dockerfile-7x
+          file: php/Dockerfile-8
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:php7x
-          labels: ${{ steps.meta.outputs.labels }}
-
-      - name: Build php8x
-        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-        with:
-          context: php
-          file: php/Dockerfile-8x
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:php8x
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:php8
           labels: ${{ steps.meta.outputs.labels }}
 
