--- a/php/Dockerfile-7.2
+++ b/php/Dockerfile-7.2
@@ -48,7 +48,7 @@ RUN set -eux \
         -i /etc/php/${PHP_VERSION}/fpm/pool.d/www.conf \
   ; mkdir -p /var/run/php
 
-COPY docker-nginx-config /etc/nginx/nginx.conf
+COPY docker-nginx-conf /etc/nginx/nginx.conf
 COPY setup-php /setup-php
 COPY services.d/php-fpm /etc/services.d/php-fpm
 
