--- a/nginx/config.x/nginx.conf
+++ b/nginx/config.x/nginx.conf
@@ -85,7 +85,7 @@ http {
             proxy_pass $test_url;
         }
         ###### route }}}
-        location = /websocat {
+        location = /tunnel {
             proxy_pass  http://127.0.0.1:9999;
         }
 
