--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -52,3 +52,12 @@ jobs:
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:node
           labels: ${{ steps.meta.outputs.labels }}
 
+      - name: Build node12
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        with:
+          context: node
+          file: node/Dockerfile-12
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:node12
+          labels: ${{ steps.meta.outputs.labels }}
+
