--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,4 +1,4 @@
-name: build web
+name: build php
 
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
