--- a/php/Dockerfile-8
+++ b/php/Dockerfile-8
@@ -44,7 +44,7 @@ RUN set -eux \
         -i /etc/php/${PHP_VERSION}/fpm/pool.d/www.conf \
   ; mkdir -p /var/run/php
 
-COPY docker-nginx-default /etc/nginx/conf.d/default.conf
+COPY docker-nginx-conf /etc/nginx/nginx.conf
 COPY setup-php /setup-php
 COPY services.d/php-fpm /etc/services.d/php-fpm
 
