--- a/.github/workflows/ngx.yml
+++ b/.github/workflows/ngx.yml
@@ -55,3 +55,12 @@ jobs:
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:x
           labels: ${{ steps.meta.outputs.labels }}
 
+      - name: Build nchan
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        with:
+          context: ngx
+          file: ngx/Dockerfile-nchan
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:nchan
+          labels: ${{ steps.meta.outputs.labels }}
+
