--- a/nginx/Dockerfile-or
+++ b/nginx/Dockerfile-or
@@ -1,7 +1,6 @@
 FROM fj0rd/io:base
 
 ARG openresty_repo=openresty/openresty
-ARG nchan_repo=slact/nchan
 ARG inlets_repo=inlets/inlets
 ARG frp_repo=fatedier/frp
 ARG s6overlay_repo=just-containers/s6-overlay
@@ -36,8 +35,6 @@ RUN set -eux \
   \
   ; OPENRESTY_VER=$(xh $github_api/${openresty_repo}/tags $github_header | jq -r '.[0].name' | cut -c 2-) \
   ; xh -F https://openresty.org/download/openresty-${OPENRESTY_VER}.tar.gz | tar -zxf - \
-  ; NCHAN_VER=$(xh $github_api/${nchan_repo}/tags $github_header | jq -r '.[0].name' | cut -c 2-) \
-  ; xh -F https://github.com/${nchan_repo}/archive/v${NCHAN_VER}.tar.gz | tar -zxf - \
   ; cd openresty-${OPENRESTY_VER} \
   ; ./configure --prefix=/opt/openresty \
         --with-luajit \
@@ -53,10 +50,9 @@ RUN set -eux \
         --with-http_realip_module \
         --with-stream_realip_module \
         --with-http_postgres_module \
-        --add-dynamic-module=../nchan-${NCHAN_VER} \
   ; make \
   ; make install \
-  ; cd .. && rm -rf openresty-${OPENRESTY_VER} nchan-${NCHAN_VER}  \
+  ; cd .. && rm -rf openresty-${OPENRESTY_VER} \
   ; opm install ledgetech/lua-resty-http \
   ; opm install SkyLothar/lua-resty-jwt \
   #; opm install duhoobo/lua-resty-smtp \
