--- a/postgres/Dockerfile-madlib
+++ b/postgres/Dockerfile-madlib
@@ -5,6 +5,7 @@ ENV BUILD_DEPS \
     git \
     cmake \
     m4 \
+    python \
     pkg-config \
     lsb-release \
     libcurl4-openssl-dev \
@@ -49,7 +50,7 @@ RUN set -eux \
       postgresql-${PG_MAJOR}-jsquery \
       postgresql-${PG_MAJOR}-pgaudit \
       pgxnclient \
-      python3 python3-pip python3-setuptools \
+      python3-pip python3-setuptools \
       libcurl4 curl jq ca-certificates \
       uuid mariadb-client \
       ${BUILD_DEPS:-} \
@@ -58,6 +59,8 @@ RUN set -eux \
       pgcli pygments \
       numpy httpx pyyaml deepmerge cachetools \
       pydantic more-itertools fn.py PyParsing \
+  ; pgxn install madlib \
+  #; pgxn load madlib \
   \
   #; curl -sSL https://install.citusdata.com/community/deb.sh | bash \
   #; apt-get install -y --no-install-recommends postgresql-13-citus-10.0 \
