--- a/postgres/Dockerfile
+++ b/postgres/Dockerfile
@@ -119,16 +119,16 @@ RUN set -eux \
   #; cmake .. \
   #; make && make install \
   #\
-  ; cd $build_dir \
-  ; git clone https://github.com/timescale/timescaledb.git \
-  ; cd timescaledb \
-  ; git checkout master \
-  ; ./bootstrap \
-  ; cd build && make \
-  ; make install \
-  #\
-  #; curl -s https://packagecloud.io/install/repositories/timescale/timescaledb/script.deb.sh | bash \
-  #; apt-get install -y --no-install-recommends timescaledb-2-postgresql-${PG_MAJOR} \
+  #; cd $build_dir \
+  #; git clone https://github.com/timescale/timescaledb.git \
+  #; cd timescaledb \
+  #; git checkout master \
+  #; ./bootstrap \
+  #; cd build && make \
+  #; make install \
+  \
+  ; curl -s https://packagecloud.io/install/repositories/timescale/timescaledb/script.deb.sh | bash \
+  ; apt-get install -y --no-install-recommends timescaledb-2-postgresql-${PG_MAJOR} \
   \
   ; rm -rf $build_dir \
   \
