--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -62,12 +62,12 @@ jobs:
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:es
           labels: ${{ steps.meta.outputs.labels }}
 
-      - name: Build polynote
-        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-        with:
-          context: java
-          file: java/Dockerfile-polynote
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:polynote
-          labels: ${{ steps.meta.outputs.labels }}
+      #- name: Build polynote
+      #  uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+      #  with:
+      #    context: java
+      #    file: java/Dockerfile-polynote
+      #    push: ${{ github.event_name != 'pull_request' }}
+      #    tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:polynote
+      #    labels: ${{ steps.meta.outputs.labels }}
 
