--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -64,15 +64,6 @@ jobs:
       #    tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:or
       #    labels: ${{ steps.meta.outputs.labels }}
 
-      - name: Build php7.2
-        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-        with:
-          context: php
-          file: php/Dockerfile-7.2
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:php72
-          labels: ${{ steps.meta.outputs.labels }}
-
       - name: Build php7
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
@@ -81,4 +72,13 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:php7
           labels: ${{ steps.meta.outputs.labels }}
+
+      #- name: Build php8
+      #  uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+      #  with:
+      #    context: php
+      #    file: php/Dockerfile-8
+      #    push: ${{ github.event_name != 'pull_request' }}
+      #    tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:php8
+      #    labels: ${{ steps.meta.outputs.labels }}
 
