--- a/nginx/config.x/nginx.conf
+++ b/nginx/config.x/nginx.conf
@@ -17,19 +17,12 @@ http {
 
     gzip  on;
 
-    js_import env.js;
-    js_var $1 $1;
-    js_var $2 $2;
-    js_var $3 $3;
-
-    ###### var {{{
-    js_set $test_url     env.u_test;
-    js_set $test_host    env.h_test;
-    ###### var }}}
+    js_import bin.js;
 
     server {
+        set $root             '/srv';
         listen                80;
-        root                  '/srv';
+        root                  $root;
         charset               utf-8;
        #default_type          application/octet-stream;
         default_type          application/json;
@@ -51,7 +44,7 @@ http {
         #access_log  /var/log/nginx/host.access.log  main;
 
         location ~* /bin/(.*) {
-            js_content env.bin;
+            js_content bin.run;
         }
 
         location / {
@@ -79,13 +72,6 @@ http {
             root   /usr/share/nginx/html;
         }
 
-        ###### route {{{
-        location /test/ {
-            rewrite ^/test/(.*)$ /$1 break;
-            proxy_set_header Host $test_host;
-            proxy_pass $test_url;
-        }
-        ###### route }}}
         location = /tunnel {
             proxy_pass  http://127.0.0.1:9999;
         }
