--- a/nginx/config.x/nginx.conf
+++ b/nginx/config.x/nginx.conf
@@ -44,6 +44,7 @@ http {
         #access_log  /var/log/nginx/host.access.log  main;
 
         location ~* /bin/(.*) {
+            set $op $1;
             js_content bin.run;
         }
 
