update php nginxconf

--- a/nginx/config/nginx.conf
+++ b/nginx/config/nginx.conf
@@ -77,6 +77,12 @@ http {
             proxy_pass  http://127.0.0.1:9999;
         }
 
+        # location /path/to/ {
+        #     rewrite ^/path/to/(.*)$ /$1 break;
+        #     proxy_set_header Host route.s;
+        #     proxy_pass http://route.s;
+        # }
+
     }
 
 }
