--- a/node/nginx.conf
+++ b/node/nginx.conf
@@ -44,7 +44,7 @@ http {
         proxy_connect_timeout 1800s;
         proxy_read_timeout    1800s;
         proxy_send_timeout    1800s;
-        client_max_body_size  80M;
+        client_max_body_size  10m;
 
         resolver $ngx_resolver;
         #access_log  /var/log/nginx/host.access.log  main;
