--- a/php/Dockerfile-7.2
+++ b/php/Dockerfile-7.2
@@ -50,7 +50,7 @@ RUN set -eux \
 
 COPY docker-nginx-conf /etc/nginx/nginx.conf
 COPY setup-php /setup-php
-COPY services.d/php-fpm /etc/services.d/php-fpm
+COPY entrypoint.sh /entrypoint.sh
 
 RUN set -ex \
   ; xh -F https://getcomposer.org/installer \
