--- a/php/Dockerfile-7.2
+++ b/php/Dockerfile-7.2
@@ -21,7 +21,7 @@ ENV PHP_PKGS \
         php${PHP_VERSION}-xdebug
 
 RUN set -eux \
-  ; xh https://packages.sury.org/php/apt.gpg | apt-key add \
+  ; curl -sSL https://packages.sury.org/php/apt.gpg | apt-key add \
   ; echo "deb https://packages.sury.org/php/ bullseye main" \
     | tee /etc/apt/sources.list.d/php7.list \
   ; apt-get update \
@@ -53,7 +53,7 @@ COPY setup-php /setup-php
 COPY entrypoint.sh /entrypoint.sh
 
 RUN set -ex \
-  ; xh -F https://getcomposer.org/installer \
+  ; curl -sSL https://getcomposer.org/installer \
     | php -- --install-dir=/usr/local/bin --filename=composer
 
 ENV PHP_DEBUG=
