--- a/ngx/Dockerfile
+++ b/ngx/Dockerfile
@@ -24,6 +24,9 @@ RUN set -eux \
   \
   ; mkdir /tmp/build && cd /tmp/build \
   \
+  ; NCHAN_VER=$(curl -sSL https://api.github.com/repos/slact/nchan/tags -H 'Accept: application/vnd.github.v3+json' | jq -r '.[0].name' | cut -c 2-) \
+  ; curl -sSL https://github.com/slact/nchan/archive/v${NCHAN_VER}.tar.gz | tar -zxf - \
+  \
   ; mkdir njs \
   ; curl -sSL http://hg.nginx.org/njs/archive/tip.tar.gz | tar -zxf - --strip-component=1 -C njs \
   \
@@ -49,6 +52,7 @@ RUN set -eux \
         --with-stream_realip_module \
         --with-stream_ssl_preread_module \
         --add-module=../njs/nginx \
+        --add-dynamic-module=../nchan-${NCHAN_VER} \
         --http-log-path=/var/log/nginx/access.log \
         --error-log-path=/var/log/nginx/error.log \
   ; make \
