--- a/ngx/config/nginx.conf
+++ b/ngx/config/nginx.conf
@@ -2,6 +2,7 @@
 
 daemon off;
 #worker_processes  auto;
+user www-data;
 worker_processes  1;
 
 events {
@@ -16,19 +17,12 @@ http {
 
     gzip  on;
 
-    js_import env.js;
-    js_var $1 $1;
-    js_var $2 $2;
-    js_var $3 $3;
-
-    ###### var {{{
-    js_set $test_url     env.u_test;
-    js_set $test_host    env.h_test;
-    ###### var }}}
+    js_import bin.js;
 
     server {
+        set $root             '/srv';
         listen                80;
-        root                  '/srv';
+        root                  $root;
         charset               utf-8;
        #default_type          application/octet-stream;
         default_type          application/json;
@@ -50,7 +44,8 @@ http {
         #access_log  /var/log/nginx/host.access.log  main;
 
         location ~* /bin/(.*) {
-            js_content env.bin;
+            set $op $1;
+            js_content bin.run;
         }
 
         location / {
@@ -78,13 +73,15 @@ http {
             root   /usr/share/nginx/html;
         }
 
-        ###### route {{{
-        location /test/ {
-            rewrite ^/test/(.*)$ /$1 break;
-            proxy_set_header Host $test_host;
-            proxy_pass $test_url;
+        location = /tunnel {
+            proxy_pass  http://127.0.0.1:9999;
         }
-        ###### route }}}
+
+        # location /path/to/ {
+        #     rewrite ^/path/to/(.*)$ /$1 break;
+        #     proxy_set_header Host route.s;
+        #     proxy_pass http://route.s;
+        # }
 
     }
 
