--- a/.github/workflows/nchan.yml
+++ b/.github/workflows/nchan.yml
@@ -59,7 +59,7 @@ jobs:
       #  uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
       #  with:
       #    context: nginx
-      #    file: nginx/Dockerfile-openresty
+      #    file: nginx/openresty.Dockerfile
       #    push: ${{ github.event_name != 'pull_request' }}
       #    tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:or
       #    labels: ${{ steps.meta.outputs.labels }}
