--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -56,7 +56,7 @@ jobs:
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           context: node
-          file: node/Dockerfile-12
+          file: node/12.Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:node12
           labels: ${{ steps.meta.outputs.labels }}
