--- a/.github/workflows/postgres.yml
+++ b/.github/workflows/postgres.yml
@@ -56,7 +56,7 @@ jobs:
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           context: postgres
-          file: postgres/Dockerfile-gis
+          file: postgres/gis.Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:pgis
           labels: ${{ steps.meta.outputs.labels }}
