--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -59,7 +59,7 @@ jobs:
       #  uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
       #  with:
       #    context: nginx
-      #    file: nginx/Dockerfile-openresty
+      #    file: nginx/openresty.Dockerfile
       #    push: ${{ github.event_name != 'pull_request' }}
       #    tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:or
       #    labels: ${{ steps.meta.outputs.labels }}
@@ -68,7 +68,7 @@ jobs:
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           context: php
-          file: php/Dockerfile-7
+          file: php/7.Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:php7
           labels: ${{ steps.meta.outputs.labels }}
@@ -77,7 +77,7 @@ jobs:
       #  uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
       #  with:
       #    context: php
-      #    file: php/Dockerfile-8
+      #    file: php/8.Dockerfile
       #    push: ${{ github.event_name != 'pull_request' }}
       #    tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:php8
       #    labels: ${{ steps.meta.outputs.labels }}
