--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,7 @@
+FROM fj0rd/scratch:goofys as goofys
+
 FROM fj0rd/io:base
+COPY --from=goofys / /
 
 ENV LANG=C.UTF-8 LC_ALL=C.UTF-8 TIMEZONE=Asia/Shanghai
 ENV DEV_DEPS \
