PGCONF_LOG_MIN_DURATION_STATEMENT

--- a/postgres/Dockerfile
+++ b/postgres/Dockerfile
@@ -163,3 +163,4 @@ ENV PGCONF_RANDOM_PAGE_COST=1.1
 ENV PGCONF_WAL_LEVEL=logical
 ENV PGCONF_MAX_REPLICATION_SLOTS=10
 ENV PGCONF_SHARED_PRELOAD_LIBRARIES="'citus,pg_stat_statements,timescaledb,pg_jieba.so'"
+ENV PGCONF_LOG_MIN_DURATION_STATEMENT=1000
